--- a/Debit-Card/styles.css
+++ b/Debit-Card/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -8,107 +9,208 @@
 }
 
 body {
+  overflow: hidden;
+}
+
+section {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #161623;
+  background: #1c1c25;
 }
 
-body::before {
+section::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  bottom: -40%;
+  left: 40%;
+  width: 600px;
+  height: 600px;
   background: linear-gradient(#f00, #f0f);
-  clip-path: circle(30% at right 70%);
+  border-radius: 50%;
 }
 
-body::after {
-  content: '';
+.card {
+  position: relative;
+  width: 508px;
+  height: 314px;
+  transform-style: preserve-3d;
+  perspective: 500px;
+}
+
+.card .face {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#2196f3, #e91e63);
-  clip-path: circle(20% at 10% 10%);
-}
-
-.container  {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 1200px;
-  flex-wrap: wrap;
-  z-index: 1;
-}
-
-.container .card {
-  position: relative;
-  width: 280px;
-  height: 400px;
-  margin: 30px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  overflow: hidden;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  transform-style: preserve-3d;
+  transition: 1s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
+.card:hover .face.front {
+  transform: rotateY(180deg);
+}
+
+.card .face.back {
+  transform: rotateY(180deg);
+}
+
+.card:hover .face.back {
+  transform: rotateY(360deg);
+}
+
+.card .face.front::before {
+  content: '';
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  width: 60px;
+  height: 60px;
+  background: #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+}
+
+.card .face.front::after {
+  content: '';
+  position: absolute;
+  bottom: 40px;
+  right: 80px;
+  width: 60px;
+  height: 60px;
+  background: #fff;
+  border-radius: 50%;
+  opacity: 0.7;
+}
+
+.card .face.front .debit {
+  position: absolute;
+  left: 40px;
+  top: 30px;
+  color: #fff;
+  font-weight: 500;
+}
+
+.card .face.front .bank {
+  position: absolute;
+  right: 40px;
+  top: 25px;
+  color: #fff;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 24px;
+}
+
+.card .face.front .chip {
+  position: absolute;
+  left: 50px;
+  top: 80px;
+  max-width: 64px;
+}
+
+.card .face.front .number {
+  position: absolute;
+  left: 40px;
+  bottom: 130px;
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 6px;
+  font-size: 18px;
+  text-shadow: 0 2px 1px #0005;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.card .face.front .valid {
+  position: absolute;
+  left: 40px;
+  bottom: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* glassmorphism effect */
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-}
-
-.container .card .content {
-  padding: 20px;
-  text-align: center;
-  transform: translateY(100px);
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.container .card:hover .content {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.container .card .content h2 {
-  position: absolute;
-  top: -40px;
-  right: 30px;
-  font-size: 8em;
-  color: rgb(255, 255, 255, 0.05);
-  pointer-events: none;
-}
-
-.container .card .content h3 {
-  font-size: 1.8em;
-  color: #fff;
-  z-index: 1;
-}
-
-.container .card .content p {
-  font-size: 1em;
   color: #fff;
   font-weight: 300;
+  line-height: 1em;
+  text-align: right;
 }
 
-.container .card .content a {
+.card .face.front .valid span:last-child {
+  margin-left: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+
+.card .face.front .cardHolder {
+  position: absolute;
+  left: 40px;
+  bottom: 40px;
+  color: #fff;
+  font-weight: 300;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+
+.card .face.back .blackbar {
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  height: 60px;
+  background: #000;
+}
+
+.card .face.back .ccvtext {
+  position: absolute;
+  left: 30px;
+  top: 120px;
+}
+
+.card .face.back .ccvtext h5 {
+  color: #fff;
+  font-weight: 400;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.card .face.back .ccvtext .whiteBar {
   position: relative;
-  display: inline-block;
-  padding: 8px 20px;
-  margin-top: 15px;
+  width: 400px;
+  height: 40px;
   background: #fff;
-  color: #000;
-  border-radius: 20px;
-  text-decoration: none;
-  font-weight: 500;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  margin-top: 5px;
+}
+
+.card .face.back .ccvtext .ccv {
+  position: relative;
+  left: 400px;
+  top: -35px;
+  background: #ccc;
+  color: #111;
+  width: 50px;
+  height: 30px;
+  font-weight: 600;
+  letter-spacing: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card .face.back .text {
+  position: absolute;
+  left: 30px;
+  right: 30px;
+  bottom: 30px;
+  color: #fff;
+  font-size: 10px;
+  line-height: 1.4em;
+  font-weight: 300;
 }
