--- a/Landing-Page/styles.css
+++ b/Landing-Page/styles.css
@@ -97,7 +97,7 @@ section video {
   height: 100%;
   z-index: 1;
   transition: 0.5s;
-  /* transition-delay: 0s; */
+  transition-delay: 1s;
   /* glassmorphism effect */
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 10px 0 15px rgba(0, 0, 0, 0.1);
@@ -108,7 +108,7 @@ section video {
 
 section.active .glass {
   width: 100%;
-  /* transition-delay: 0s; */
+  transition-delay: 0s;
   /* glassmorphism effect */
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
@@ -120,14 +120,14 @@ section .content {
   z-index: 10;
   text-align: center;
   transition: 0.5s;
-  /* transition-delay: 0s; */
+  transition-delay: 1s;
 }
 
 section.active .content {
   opacity: 0;
   visibility: hidden;
   transform: translateX(-200px);
-  /* transition-delay: 0s; */
+  transition-delay: 0s;
 }
 
 section .content h2 {
@@ -182,4 +182,73 @@ section .sci li a {
   font-weight: 500;
   font-size: 12px;
   text-transform: uppercase;
+}
+
+section .navigation {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
+section .navigation li {
+  list-style: none;
+  text-align: center;
+  margin: 15px 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+  transform: translateX(200px);
+  transition-delay: calc(0.2s * var(--i));
+}
+
+section.active .navigation li {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(0);
+}
+
+section .navigation li a {
+  color: #111;
+  font-size: 1.5em;
+  letter-spacing: 4px;
+  text-decoration: none;
+  font-weight: 300;
+  text-transform: uppercase;
+  background: #fff;
+  padding: 4px 10px;
+  display: inline-block;
+}
+
+section .navigation li a:hover {
+  background: #111;
+  color: #fff;
+  letter-spacing: 10px;
+  text-transform: lowercase;
+}
+
+@media (max-width: 991px) {
+  header {
+    padding: 20px;
+  }
+
+  section .sci {
+    bottom: 20px;
+    right: 20px;
+  }
+
+  .glass {
+    width: 50%;
+  }
+
+  section .content h2 {
+    font-size: 18vw;
+  }
+
+  section .content h2 span {
+    font-size: 0.25em;
+    letter-spacing: 2px;
+    padding: 0 5px;
+  }
 }
