--- a/Contact-Cards-2/styles.css
+++ b/Contact-Cards-2/styles.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -16,56 +16,6 @@ body {
   background: #e0f7fa;
 }
 
-.hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  width: 980px;
-  height: 8em;
-  border-radius: 15px;
-  color: rgba(255, 255, 255, 0.7);
-  transition: 0.5s;
-  /* glassmorphism effect */
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-}
-
-.hero:hover {
-  color: rgba(255, 255, 255, 1);
-}
-
-.hero h1 {
-  font-size: 3em;
-  font-weight: 400;
-}
-
-body::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(#f00, #f0f);
-  clip-path: circle(30% at right 70%);
-}
-
-section::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(#2196f3, #e91e63);
-  clip-path: circle(20% at 10% 10%);
-}
-
 .container  {
   position: relative;
   display: flex;
@@ -73,7 +23,6 @@ section::before {
   align-items: center;
   margin: 40px 0;
   flex-wrap: wrap;
-  z-index: 1;
 }
 
 .container .card {
@@ -86,40 +35,37 @@ section::before {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* glassmorphism effect */
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .container .card .content {
-  position: relative;
+  position: absolute;
+  bottom: -160px;
+  width: 100%;
+  height: 160px;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
   flex-direction: column;
-  opacity: 0.5;
-  transition: 0.5s;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  box-shadow: 0 -10px 10px rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  transition: bottom 0.5s;
+  transition-delay: 0.8s;
 }
 
 .container .card:hover .content {
-  opacity: 1;
-  transform: translateY(-20px);
+  bottom: 0;
 }
 
-.container .card .content .imgBox {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 10px solid rgba(0, 0, 0, 0.25);
+.container .card .imgBox {
+  width: 100%;
+  height: 100%;
 }
 
-.container .card .content .imgBox img {
+.container .card .imgBox img {
   position: absolute;
   top: 0;
   left: 0;
@@ -135,8 +81,17 @@ section::before {
   font-weight: 500;
   font-size: 18px;
   text-align: center;
-  margin: 20px 0 10px;
+  margin: 20px 0 15px;
   line-height: 1.1em;
+  transition: 0.5s;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition-delay: 0.6s;
+}
+
+.container .card:hover .content .contentBox h3 {
+  opacity: 1;
+  transform: translateY(0px);
 }
 
 .container .card .content .contentBox h3 span {
@@ -145,27 +100,27 @@ section::before {
   text-transform: initial;
 }
 
-.container .card .sci {
-  position: absolute;
-  bottom: 50px;
+.container .card .content .sci {
+  position: relative;
+  bottom: 10px;
   display: flex;
 }
 
-.container .card .sci li {
+.container .card .content .sci li {
   list-style: none;
   margin: 0 10px;
   transform: translateY(40px);
   transition: 0.5s;
   opacity: 0;
-  transition-delay: calc(0.1s * var(--i));
+  transition-delay: calc(0.2s * var(--i));
 }
 
-.container .card:hover .sci li {
-  transform: translateY(0px);
+.container .card:hover .content .sci li {
+  transform: translateY(0);
   opacity: 1;
 }
 
-.container .card .sci li a {
+.container .card .content .sci li a {
   color: #fff;
   font-size: 24px;
 }
